# hackathon-template

./: .env  CLAUDE.md
backend/: CLAUDE.md  Dockerfile  langgraph.json  pyproject.toml
backend/app/: crud.py
backend/app/alembic/versions/: 5e66d11cb201_extend_models.py
backend/app/api/routes/: items.py
backend/app/models/: ARCHITECTRUE.md  __init__.py  ai_model.py  api_key.py  base.py  content.py  embedding.py  event.py  file_asset.py  item.py  link_tables.py  membership.py  organization.py  setting.py  tag.py  user.py
backend/tests/api/routes/: test_items.py
backend/tests/scripts/: test_backend_pre_start.py  test_test_pre_start.py
backend/tests/utils/: item.py
frontend/: CLAUDE.md  README.md  biome.json  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/AI/: AIChatPanel.tsx  AIInsightBox.tsx  AskModelDrawer.tsx
frontend/src/components/Cards/: AlertCard.tsx  StatCard.tsx  TrustScoreCard.tsx
frontend/src/components/Charts/: BarChart.tsx  FeatureImportanceChart.tsx  LineChart.tsx  RadarChart.tsx  UncertaintyHistogram.tsx
frontend/src/components/Common/: Navbar.tsx
frontend/src/components/Filters/: DateRangePicker.tsx  DropdownFilter.tsx  SearchBar.tsx
frontend/src/components/Items/: AddItem.tsx
frontend/src/components/Layout/: Footer.tsx  PageContainer.tsx
frontend/src/components/Tables/: CompareTable.tsx  DataTable.tsx  EvidenceTable.tsx
frontend/src/components/Utilities/: BadgeConfidence.tsx  ThemeToggle.tsx  TooltipInfo.tsx
frontend/src/hooks/: useAIQuery.ts  useChartData.ts  useColorByTrust.ts  useDataFetch.ts
frontend/src/routes/: login.tsx  recover-password.tsx  reset-password.tsx  signup.tsx
frontend/src/routes/_layout/: about.tsx  app-settings.tsx  compare-sources.tsx  dashboard.tsx  model-insights.tsx  source-detail.tsx
frontend/src/utils/: trustColors.ts
